--- a/README.org
+++ b/README.org
@@ -67,8 +67,10 @@ helps you to organize your files :
     + configuration, development, publication
   - Each circle contains a project, e.g.:
     + configuration / emacs
+    + configuration / vifm
     + development / elisp
     + publication / tea
+    + publication / art
 
 
 ** Important note for version 1 users
