--- a/README.org
+++ b/README.org
@@ -320,8 +320,8 @@ the declaration. This declaration gathers main options and keybindings :
            ("<C-next>" . torus-next-location)
            ("<C-home>" . torus-previous-circle)
            ("<C-end>" . torus-next-circle)
-           ("<C-S-home>" . torus-previous-torus)
-           ("<C-S-end>" . torus-next-torus)
+           ("<S-home>" . torus-previous-torus)
+           ("<S-end>" . torus-next-torus)
            ("s-SPC" . torus-switch-location)
            ("s-=" . torus-switch-circle)
            ("s-*" . torus-switch-torus)
@@ -330,8 +330,11 @@ the declaration. This declaration gathers main options and keybindings :
            ("<S-prior>" . torus-newer)
            ("<S-next>" . torus-older)
            ("C-^" . torus-alternate)
-           ("s-^" . torus-alternate-menu)
-           ("<S-home>" . torus-alternate-in-same-torus-other-circle)
+	   ("s-^" . torus-alternate-in-same-torus-other-circle)
+	   ("<C-S-prior>" . torus-alternate-in-same-torus)
+	   ("<C-S-next>" . torus-alternate-in-same-circle)
+	   ("<C-S-home>" . torus-alternate-in-other-torus)
+	   ("<C-S-end>" . torus-alternate-in-other-circle)
            ("<S-end>" . torus-alternate-in-same-circle)
            ("<M-prior>" . torus-move-location-backward)
            ("<M-next>" . torus-move-location-forward)
